--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body{
-  color: grey;
+  color: white;
   background: black;
   margin: 0px;
 }
 header{
-  border-bottom: solid 2px rgb(43, 123, 229);
+  border-bottom: solid 2px rgb(42, 122, 228);
   padding: 20px;
   font-size: 32px;
-  color: rgb(43, 123, 229);
+  color: rgb(42, 122, 228);
 }
   
